--- a/Resources/views/Thread/comment_new_content.html.twig
+++ b/Resources/views/Thread/comment_new_content.html.twig
@@ -17,45 +17,60 @@
 {% endif %}
 
 {% block fos_comment_comment_form_holder %}
-    <div class="fos_comment_comment_form_holder panel panel-default">
-        <div class="panel-heading">
-        {% block fos_comment_form_title %}
-            {% if first %}
-                <h3 class="panel-title">{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_headline_first{% endtrans %}</h3>
-            {% elseif parent is not null %}
-                <h3 class="panel-title">{% trans with {"%name%": parent.authorName } from 'FOSCommentBundle' %}fos_comment_comment_reply_reply_to{% endtrans %}</h3>
-            {% else %}
-                <h3 class="panel-title">{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_headline{% endtrans %}</h3>
-            {% endif %}
-        {% endblock %}
-        </div>
-
+    <div class="fos_comment_comment_form_holder">
         {% block fos_comment_comment_new_form %}
-            <div class="panel-body">
-                <form class="fos_comment_comment_new_form" action="{{ url('fos_comment_post_thread_comments', url_parameters) }}" data-parent="{{ parent.id|default() }}" method="POST">
-
-                    {% block fos_comment_form_fields %}
-                        <div class="fos_comment_form_errors">
-                            {{ form_errors(form) }}
-                            {{ form_errors(form.body) }}
-                        </div>
-                        {{ form_widget(form.body, {'horizontal_input_wrapper_class': ''}) }}
-
-                        {{ form_rest(form) }}
-                    {% endblock %}
-
-                    <div class="fos_comment_submit">
-                        {% block fos_comment_form_submit %}
-                            {% if parent is not null %}
-                                <input class="btn" type="button" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_reply_cancel{% endtrans %}" class="fos_comment_comment_reply_cancel" />
+            <form class="fos_comment_comment_new_form" action="{{ url('fos_comment_post_thread_comments', url_parameters) }}" data-parent="{{ parent.id|default() }}" method="POST">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        {% block fos_comment_form_title %}
+                            {% if first %}
+                                <h3 class="panel-title">{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_headline_first{% endtrans %}</h3>
+                            {% elseif parent is not null %}
+                                <h3 class="panel-title">{% trans with {"%name%": parent.authorName } from 'FOSCommentBundle' %}fos_comment_comment_reply_reply_to{% endtrans %}</h3>
+                            {% else %}
+                                <h3 class="panel-title">{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_headline{% endtrans %}</h3>
                             {% endif %}
-                            <input class="btn btn-default" type="submit" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_submit{% endtrans %}" />
                         {% endblock %}
                     </div>
 
-                </form>
-            </div>
-        {% endblock fos_comment_comment_new_form %}
+                    <div class="panel-body">
+                        {% block fos_comment_form_fields %}
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="fos_comment_form_errors">
+                                        {{ form_errors(form) }}
+                                        {{ form_errors(form.body) }}
+                                    </div>
 
+                                    {{ form_label(form.body, 'form_label_body'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
+                                    {{ form_widget(form.body, {'horizontal_input_wrapper_class': ''}) }}
+                                </div>
+
+                                <div class="col-sm-6">
+                                    {{ form_label(form.website, 'form_label_website'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
+                                    {{ form_widget(form.website, {'horizontal_input_wrapper_class': ''}) }}
+                                </div>
+
+                                <div class="col-sm-6">
+                                    {{ form_label(form.email, 'form_label_email'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
+                                    {{ form_widget(form.email, {'horizontal_input_wrapper_class': ''}) }}
+                                </div>
+                            </div>
+
+                            {{ form_rest(form) }}
+                        {% endblock %}
+
+                        <div class="fos_comment_submit">
+                            {% block fos_comment_form_submit %}
+                                {% if parent is not null %}
+                                    <input class="btn" type="button" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_reply_cancel{% endtrans %}" class="fos_comment_comment_reply_cancel" />
+                                {% endif %}
+                                <input class="btn btn-default" type="submit" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_new_submit{% endtrans %}" />
+                            {% endblock %}
+                        </div>
+                    </div>
+                </div>
+            </form>
+        {% endblock fos_comment_comment_new_form %}
     </div>
 {% endblock fos_comment_comment_form_holder %}
