Add a comment private flag attribute (issue #5)

--- a/Resources/views/Thread/comments.html.twig
+++ b/Resources/views/Thread/comments.html.twig
@@ -30,5 +30,7 @@
 {% endif %}
 
 {% for commentinfo in comments %}
-    {% include "FOSCommentBundle:Thread:comment.html.twig" with { "children": commentinfo.children, "comment": commentinfo.comment, "depth": depth, "view": view } %}
+    {% if not commentinfo.comment.private %}
+        {% include "FOSCommentBundle:Thread:comment.html.twig" with { "children": commentinfo.children, "comment": commentinfo.comment, "depth": depth, "view": view } %}
+    {% endif %}
 {% endfor %}
