--- a/Resources/views/Thread/comment_new_content.html.twig
+++ b/Resources/views/Thread/comment_new_content.html.twig
@@ -36,24 +36,27 @@
                     <div class="panel-body">
                         {% block fos_comment_form_fields %}
                             <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="fos_comment_form_errors">
-                                        {{ form_errors(form) }}
-                                        {{ form_errors(form.body) }}
+                                {% if form.authorName is defined %}
+                                    <div class="col-sm-4">
+                                        {{ form_label(form.authorName, 'form_label_author_name'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
+                                        {{ form_widget(form.authorName, {'horizontal_input_wrapper_class': ''}) }}
                                     </div>
+                                {% endif %}
 
-                                    {{ form_label(form.body, 'form_label_body'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
-                                    {{ form_widget(form.body, {'horizontal_input_wrapper_class': ''}) }}
-                                </div>
-
-                                <div class="col-sm-6">
+                                <div class="col-sm-4">
                                     {{ form_label(form.website, 'form_label_website'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
                                     {{ form_widget(form.website, {'horizontal_input_wrapper_class': ''}) }}
                                 </div>
 
-                                <div class="col-sm-6">
+                                <div class="col-sm-4">
                                     {{ form_label(form.email, 'form_label_email'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
                                     {{ form_widget(form.email, {'horizontal_input_wrapper_class': ''}) }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    {{ form_label(form.body, 'form_label_body'|trans({}, 'SonataCommentBundle'), {'horizontal_label_class': ''}) }}
+                                    {{ form_widget(form.body, {'horizontal_input_wrapper_class': ''}) }}
                                 </div>
                             </div>
 
