Switch all templates references to Twig namespaced syntax

--- a/src/Resources/views/Block/thread_async.html.twig
+++ b/src/Resources/views/Block/thread_async.html.twig
@@ -1,1 +1,1 @@
-{% include 'SonataCommentBundle:Thread:async.html.twig' with {'id': settings.id } %}
+{% include '@SonataComment/Thread/async.html.twig' with {'id': settings.id } %}
